# expresso-v4

./: .env.example  .gitignore  API.md  CHANGELOG.md  Cargo.toml  DEPLOYMENT_PHASE2_COMPLETED.txt  Dockerfile.admin  Dockerfile.auth  Dockerfile.calendar  Dockerfile.chat  Dockerfile.compliance  Dockerfile.contacts  Dockerfile.drive  Dockerfile.flows  Dockerfile.mail  Dockerfile.meet  Dockerfile.milter  Dockerfile.notifications  Dockerfile.search  Dockerfile.web  Dockerfile.wopi  GUIDELINES.md  Makefile  PHASE-4-AI-ANTISPAM-ARCHITECTURE.md  README.md  ROADMAP_DEPLOYMENT_STATUS.md  SESSION_HANDOFF.md  deny.toml  expect  package.json
docs/: ARCHITECTURE.md  INFRA_LAB.md  (+9 more)
libs/expresso-auth-client/: Cargo.toml
libs/expresso-auth-client/src/: axum_ext.rs  claims.rs  error.rs  keycloak_basic.rs  lib.rs  metrics.rs  multi_validator.rs  tenant_resolver.rs  validator.rs
libs/expresso-auth-client/tests/: claims.rs
libs/expresso-core/: Cargo.toml
libs/expresso-core/src/: audit.rs  config.rs  db.rs  error.rs  health.rs  lib.rs  ratelimit.rs  redis.rs  telemetry.rs
libs/expresso-crypto/: Cargo.toml
libs/expresso-crypto/src/: error.rs  lib.rs
libs/expresso-imip/: Cargo.toml
libs/expresso-imip/src/: lib.rs
libs/expresso-mail-auth/: Cargo.toml
libs/expresso-mail-auth/src/: lib.rs
libs/expresso-mail-parser/: Cargo.toml
libs/expresso-mail-parser/src/: error.rs  lib.rs
libs/expresso-storage/: Cargo.toml
libs/expresso-storage/src/: client.rs  error.rs  lib.rs
services/expresso-admin/: Cargo.toml
services/expresso-admin/src/: audit.rs  auth.rs  counter.rs  dav_admin.rs  dead_props.rs  drive_quotas.rs  handlers.rs  kc.rs  main.rs  templates.rs  tenants.rs
services/expresso-admin/static/: admin.css
services/expresso-admin/templates/: addressbook_admin_edit.html  addressbooks_admin.html  audit_admin.html  base.html  calendar_admin_edit.html  calendars_admin.html  counter_admin.html  dashboard.html  dead_props_admin.html  drive_quotas_admin.html  realm.html  tenant_admin_config.html  tenant_admin_edit.html  tenant_wizard.html  tenants_admin.html  user_form.html  users.html
services/expresso-auth/: Cargo.toml  README.md
services/expresso-auth/src/: config.rs  error.rs  kc_admin.rs  main.rs  ratelimit.rs  state.rs
services/expresso-auth/src/handlers/: callback.rs  forgot.rs  impersonate.rs  login.rs  logout.rs  me.rs  mod.rs  refresh.rs
services/expresso-auth/src/oidc/: discovery.rs  govbr.rs  mod.rs  multi_provider.rs  pkce.rs  tokens.rs
services/expresso-calendar/: Cargo.toml
services/expresso-calendar/src/: error.rs  events.rs  imip_publish.rs  main.rs  state.rs
services/expresso-calendar/src/api/: calendars.rs  events.rs  health.rs  mod.rs  scheduling.rs  sharing.rs  stream.rs  users.rs  wellknown.rs
services/expresso-calendar/src/caldav/: auth.rs  mkcal.rs  mod.rs  movecopy.rs  propfind.rs  proppatch.rs  report.rs  resource.rs  schedule.rs  sync.rs  uri.rs  xml.rs
services/expresso-calendar/src/domain/: calendar.rs  counter.rs  dead_props.rs  event.rs  freebusy.rs  ical.rs  itip.rs  mod.rs  rrule.rs  tombstone_gc.rs
services/expresso-chat/: Cargo.toml
services/expresso-chat/src/: error.rs  main.rs  state.rs
services/expresso-chat/src/api/: channels.rs  context.rs  health.rs  messages.rs  mod.rs
services/expresso-chat/src/domain/: channel.rs  mod.rs
services/expresso-chat/src/matrix/: mod.rs
services/expresso-contacts/: Cargo.toml
services/expresso-contacts/src/: error.rs  events.rs  main.rs  state.rs
services/expresso-contacts/src/api/: addressbooks.rs  contacts.rs  context.rs  gal.rs  health.rs  mod.rs  sharing.rs  users.rs  wellknown.rs
services/expresso-contacts/src/carddav/: auth.rs  filter.rs  mkcol.rs  mod.rs  movecopy.rs  propfind.rs  proppatch.rs  report.rs  resource.rs  sync.rs  uri.rs  xml.rs
services/expresso-contacts/src/domain/: addressbook.rs  contact.rs  dead_props.rs  mod.rs  tombstone_gc.rs  vcard.rs
services/expresso-drive/: Cargo.toml
services/expresso-drive/src/: error.rs  main.rs  state.rs
services/expresso-drive/src/api/: context.rs  files.rs  health.rs  mod.rs  shares.rs  uploads.rs  wopi.rs  wopi_metrics.rs
services/expresso-drive/src/domain/: file.rs  mod.rs  quota.rs  share.rs  upload.rs  version.rs  wopi_lock.rs
services/expresso-event-audit/: Cargo.toml
services/expresso-event-audit/src/: main.rs
services/expresso-imip-dispatch/: Cargo.toml
services/expresso-imip-dispatch/src/: main.rs
services/expresso-mail/: Cargo.toml
services/expresso-mail/src/: bootstrap.rs  dkim.rs  error.rs  imip.rs  ingest.rs  lmtp.rs  main.rs  scanner.rs  sieve.rs  state.rs
services/expresso-mail/src/api/: attachments.rs  compose.rs  context.rs  folders.rs  health.rs  messages.rs  mod.rs  sieve.rs  vacation.rs
services/expresso-mail/src/imap/: lockout.rs  metrics.rs  mod.rs  session.rs
services/expresso-mail/src/smtp/: mod.rs  session.rs  submission.rs
services/expresso-meet/: Cargo.toml
services/expresso-meet/src/: error.rs  jitsi.rs  main.rs  state.rs
services/expresso-milter/: Cargo.toml
services/expresso-milter/src/: main.rs
services/expresso-search/: Cargo.toml
services/expresso-search/src/: index_store.rs  main.rs
services/expresso-tenant-migrate/: Cargo.toml
services/expresso-tenant-migrate/src/: main.rs
services/expresso-tenant-provision/: Cargo.toml
services/expresso-tenant-provision/src/: main.rs
services/expresso-web/: Cargo.toml
services/expresso-web/src/: config.rs  error.rs  main.rs  routes.rs  templates.rs  upstream.rs  wopi.rs
services/expresso-web/static/: app.css
services/expresso-web/templates/: _appnav.html  addrbook_share.html  base.html  calendar.html  calendar_day.html  calendar_month.html  calendar_share.html  calendar_week.html  contact_form.html  contacts.html  drive.html  drive_edit.html  drive_share.html  drive_trash.html  drive_versions.html  event_form.html  home.html  login.html  mail_compose.html  mail_list.html  mail_rules.html  mail_thread.html  me.html  security.html
services/expresso-wopi/: Cargo.toml
services/expresso-wopi/src/: main.rs
(+139 files in other folders)
