[workspace]
resolver = "2"
members = [
    # Services
    "services/expresso-mail",
    "services/expresso-calendar",
    "services/expresso-contacts",
    "services/expresso-drive",
    "services/expresso-auth",
    "services/expresso-admin",
    "services/expresso-compliance",
    "services/expresso-search",
    "services/expresso-wopi",
    "services/expresso-notifications",
    "services/expresso-flows",
    # Libraries
    "libs/expresso-core",
    "libs/expresso-crypto",
    "libs/expresso-mail-parser",
    "libs/expresso-storage",
    "libs/expresso-auth-client",
]

[workspace.dependencies]
# Async runtime
tokio        = { version = "1", features = ["full"] }
tokio-util   = { version = "0.7", features = ["codec"] }

# Web framework
axum         = { version = "0.7", features = ["macros", "multipart", "ws"] }
tower        = { version = "0.5", features = ["full"] }
tower-http   = { version = "0.6", features = ["trace", "cors", "compression-gzip", "auth"] }
hyper        = { version = "1", features = ["full"] }

# Database
sqlx         = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres", "uuid", "time", "json"] }

# Redis
deadpool-redis = { version = "0.16", features = ["rt_tokio_1"] }

# S3 / MinIO
aws-sdk-s3        = { version = "1", features = ["behavior-version-latest"] }
aws-config        = { version = "1", features = ["behavior-version-latest"] }
aws-smithy-http   = "0.60"

# gRPC
tonic        = "0.12"
prost        = "0.13"

# Serialization
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
serde_yaml   = "0.9"

# Auth / Crypto
jsonwebtoken = "9"
argon2       = "0.5"
rand         = "0.8"
ring         = "0.17"
age          = "0.10"
x509-parser  = "0.16"
ed25519-dalek = "2"
sha2         = "0.10"

# Email
lettre       = { version = "0.11", features = ["tokio1", "native-tls", "smtp-transport", "pool"] }
mail-parser  = "0.9"
mail-builder  = "0.3"

# IMAP
imap-codec   = "2"
imap-types   = "2"

# CalDAV / CardDAV / WebDAV
icalendar    = "0.16"

# Search
tantivy      = "0.22"

# HTTP client
reqwest      = { version = "0.12", features = ["json", "stream", "native-tls"] }

# Logging / Tracing / Observability
tracing                     = "0.1"
tracing-subscriber          = { version = "0.3", features = ["env-filter", "json"] }
opentelemetry               = "0.24"
opentelemetry-otlp          = "0.17"
opentelemetry_sdk           = "0.24"
tracing-opentelemetry       = "0.25"

# Error handling
anyhow       = "1"
thiserror    = "1"

# Utilities
uuid         = { version = "1", features = ["v4", "v7", "serde"] }
time         = { version = "0.3", features = ["serde", "formatting", "parsing"] }
chrono       = { version = "0.4", features = ["serde"] }
bytes        = "1"
base64       = "0.22"
url          = "1"
regex        = "1"
once_cell    = "1"
dashmap      = "6"
async-trait  = "0.1"
futures      = "0.3"
itertools    = "0.13"

# Config
config       = "0.14"

# Metrics
prometheus   = { version = "0.13", features = ["process"] }

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true

[profile.release-with-debug]
inherits = "release"
strip = false
debug = true
