[package]
name = "expresso-auth-client"
version = "0.1.0"
edition = "2021"
description = "JWT validation, OIDC client, session management"

[lib]
name = "expresso_auth_client"

[dependencies]
# Workspace deps
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
time = { workspace = true }
async-trait = { workspace = true }
jsonwebtoken = { workspace = true }
reqwest = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
