[package]
name = "expresso-imip"
publish = false
version = "0.1.0"
edition = "2021"
description = "iMIP (RFC 6047) builder — iCal REQUEST/CANCEL + MIME multipart assembly."

[dependencies]
time     = { version = "0.3", features = ["formatting", "parsing", "macros"] }
uuid     = { version = "1", features = ["v4"] }
thiserror = "1"

[dev-dependencies]
