[package]
name = "expresso-admin"
publish = false
version = "0.1.0"
edition = "2021"
description = "Admin API + tenant management"

[[bin]]
name = "expresso-admin"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true, features = ["fs", "trace"] }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry_sdk = { workspace = true }
tracing-opentelemetry = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
time = { workspace = true }
prometheus = { workspace = true }
reqwest = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
askama = { version = "0.12", default-features = false, features = ["with-axum"] }
askama_axum = "0.4"
percent-encoding = "2"
sqlx = { workspace = true }

expresso-core = { path = "../../libs/expresso-core", package = "expresso-core" }
expresso-observability = { workspace = true }
expresso-auth-client = { path = "../../libs/expresso-auth-client", package = "expresso-auth-client" }

[dev-dependencies]
tokio-test = "0.4"
