[package]
name = "expresso-auth"
version = "0.1.0"
edition = "2021"
description = "OIDC Relying Party — authorization_code+PKCE flow against Keycloak"

[[bin]]
name = "expresso-auth"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
time = { workspace = true }
reqwest = { workspace = true }
jsonwebtoken = { workspace = true }

# Crypto / encoding for PKCE + state
base64 = "0.22"
rand = "0.8"
sha2 = "0.10"
url = "2"
serde_urlencoded = "0.7"

# Internal
expresso-core         = { path = "../../libs/expresso-core" }
expresso-auth-client  = { path = "../../libs/expresso-auth-client" }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "test-util"] }
