[package]
name = "expresso-calendar"
version = "0.1.0"
edition = "2021"
description = "CalDAV server + meeting management"

[[bin]]
name = "expresso-calendar"
path = "src/main.rs"

[dependencies]
# Workspace deps
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry_sdk = { workspace = true }
tracing-opentelemetry = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
time = { workspace = true }
sha2 = { workspace = true }
prometheus = { workspace = true }
reqwest = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
icalendar = { workspace = true }

# Internal libs
expresso-core = { path = "../../libs/expresso-core", package = "expresso-core" }
expresso-auth-client = { path = "../../libs/expresso-auth-client", package = "expresso-auth-client" }
sqlx = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
