[package]
name = "expresso-chat"
version = "0.1.0"
edition = "2021"
description = "Chat BFF — Synapse/Matrix gateway with tenant metadata"

[[bin]]
name = "expresso-chat"
path = "src/main.rs"

[dependencies]
tokio               = { workspace = true }
axum                = { workspace = true }
tower               = { workspace = true }
tower-http          = { workspace = true }
serde               = { workspace = true }
serde_json          = { workspace = true }
tracing             = { workspace = true }
tracing-subscriber  = { workspace = true }
opentelemetry       = { workspace = true }
opentelemetry-otlp  = { workspace = true }
opentelemetry_sdk   = { workspace = true }
tracing-opentelemetry = { workspace = true }
anyhow              = { workspace = true }
thiserror           = { workspace = true }
uuid                = { workspace = true }
time                = { workspace = true }
sha2                = { workspace = true }
base64              = { workspace = true }
prometheus          = { workspace = true }
reqwest             = { workspace = true }
async-trait         = { workspace = true }
futures             = { workspace = true }
sqlx                = { workspace = true }
url                 = "2"

expresso-core        = { path = "../../libs/expresso-core" }
expresso-observability = { workspace = true }
expresso-auth-client = { path = "../../libs/expresso-auth-client" }
