[package]
name = "expresso-drive"
version = "0.1.0"
edition = "2021"
description = "WebDAV server + file sync API"

[[bin]]
name = "expresso-drive"
path = "src/main.rs"

[dependencies]
tokio              = { workspace = true }
axum               = { workspace = true, features = ["multipart"] }
tower              = { workspace = true }
tower-http         = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow             = { workspace = true }
thiserror          = { workspace = true }
uuid               = { workspace = true }
time               = { workspace = true }
sha2               = { workspace = true }
sqlx               = { workspace = true }
futures            = { workspace = true }
rand               = { workspace = true }
base64             = { workspace = true }
hmac               = { workspace = true }
hex                = { workspace = true }

expresso-core        = { path = "../../libs/expresso-core", package = "expresso-core" }
expresso-observability = { workspace = true }
expresso-auth-client = { path = "../../libs/expresso-auth-client", package = "expresso-auth-client" }
