[package]
name = "expresso-imip-dispatch"
version = "0.1.0"
edition = "2021"
description = "NATS JetStream consumer: sends iMIP (RFC 6047) invites to attendees via SMTP."

[dependencies]
tokio      = { workspace = true }
tracing    = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow     = { workspace = true }
futures    = { workspace = true }
axum       = { workspace = true }
prometheus = { workspace = true }
async-nats = "0.37"
once_cell  = "1"
serde      = { workspace = true }
serde_json = { workspace = true }
time       = { version = "0.3", features = ["formatting", "parsing", "serde", "serde-well-known"] }
expresso-imip = { path = "../../libs/expresso-imip" }
lettre     = { version = "0.11", default-features = false, features = ["smtp-transport", "tokio1-rustls-tls", "builder", "tracing"] }
