[package]
name = "expresso-mail"
version = "0.1.0"
edition = "2021"
description = "SMTP/IMAP server + webmail API"

[[bin]]
name = "expresso-mail"
path = "src/main.rs"

[dependencies]
# Workspace deps
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry_sdk = { workspace = true }
tracing-opentelemetry = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
time = { workspace = true }
prometheus = { workspace = true }
reqwest = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
lettre = { workspace = true }
mail-parser = { workspace = true }
mail-builder = { workspace = true }
mail-auth = { workspace = true }
sieve-rs  = { workspace = true }
rustls-pki-types = { workspace = true }
imap-codec = { workspace = true }
imap-types = { workspace = true }
tantivy = { workspace = true }
chrono = { workspace = true }

# Internal libs
expresso-core = { path = "../../libs/expresso-core", package = "expresso-core" }
expresso-crypto = { path = "../../libs/expresso-crypto", package = "expresso-crypto" }
expresso-mail-parser = { path = "../../libs/expresso-mail-parser", package = "expresso-mail-parser" }
expresso-storage = { path = "../../libs/expresso-storage", package = "expresso-storage" }
expresso-auth-client = { path = "../../libs/expresso-auth-client", package = "expresso-auth-client" }
sqlx = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
