[package]
name = "expresso-meet"
version = "0.1.0"
edition = "2021"
description = "Video meetings BFF — Jitsi/LiveKit gateway"

[[bin]]
name = "expresso-meet"
path = "src/main.rs"

[dependencies]
tokio              = { workspace = true }
axum               = { workspace = true }
tower              = { workspace = true }
tower-http         = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow             = { workspace = true }

expresso-core = { path = "../../libs/expresso-core" }

[dev-dependencies]
tokio-test = "0.4"
