[package]
name = "expresso-milter"
publish = false
version = "0.1.0"
edition = "2021"
description = "Milter sidecar: inbound SPF/DKIM/DMARC verification + outbound DKIM signing for Postfix"

[[bin]]
name = "expresso-milter"
path = "src/main.rs"

[dependencies]
expresso-observability = { workspace = true }
tokio              = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow             = { workspace = true }
indymilter         = "0.3"
bytes              = "1"
expresso-mail-auth = { path = "../../libs/expresso-mail-auth", package = "expresso-mail-auth" }
axum               = { workspace = true }
serde_json         = { workspace = true }

[dev-dependencies]
indymilter-test = "0.2"
