[package]
name = "expresso-search"
version = "0.1.0"
edition = "2021"
description = "Full-text search service (Tantivy)"

[[bin]]
name = "expresso-search"
path = "src/main.rs"

[dependencies]
# Workspace deps
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry_sdk = { workspace = true }
tracing-opentelemetry = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
time = { workspace = true }
prometheus = { workspace = true }
reqwest = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
tantivy = { workspace = true }

# Internal libs
expresso-core = { path = "../../libs/expresso-core", package = "expresso-core" }
expresso-observability = { workspace = true }

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"
