[package]
name = "expresso-tenant-migrate"
version = "0.1.0"
edition = "2021"
description = "Migra users do realm único 'expresso' → realms per-tenant"

[[bin]]
name = "expresso-tenant-migrate"
path = "src/main.rs"

[dependencies]
tokio        = { workspace = true }
anyhow       = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
reqwest      = { workspace = true }
tracing      = { workspace = true }
tracing-subscriber = { workspace = true }
clap         = { version = "4", features = ["derive", "env"] }
