[package]
name = "expresso-tenant-provision"
publish = false
version = "0.1.0"
edition = "2021"
description = "Idempotent Keycloak realm + clients + roles + initial admin provisioning (CLI)."

[dependencies]
tokio      = { workspace = true }
anyhow     = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
reqwest    = { workspace = true }
tracing    = { workspace = true }
tracing-subscriber = { workspace = true }
clap       = { version = "4", features = ["derive", "env"] }
